# atsame54-hal

./: .gitignore  .gitmodules  AUTHORS  CMakeLists.txt  CMakePresets.json  README.md  cmake.graphml  cpplint.cfg  toolchain.cmake
.devcontainer/: devcontainer.json
.github/workflows/: build.yml  lint.yml
atsame54-bootloader/: CMakeLists.txt
atsame54-bootloader/include/bootloader/: memory_map.h
atsame54-bootloader/ld/: bootloader.ld  memory.ld
atsame54-core/: CMakeLists.txt
atsame54-core/include/component/: ac.h  adc.h  aes.h  can.h  ccl.h  cmcc.h  dac.h  dmac.h  dsu.h  eic.h  evsys.h  freqm.h  gclk.h  gmac.h  hmatrixb.h  i2s.h  icm.h  mclk.h  nvmctrl.h  osc32kctrl.h  oscctrl.h  pac.h  pcc.h  pdec.h  pm.h  port.h  pukcc.h  qspi.h  ramecc.h  rstc.h  rtc.h  sdhc.h  sercom.h  supc.h  tc.h  tcc.h  trng.h  usb.h  wdt.h
atsame54-core/include/device/: component-version.h  ports.h  same54p20a.h
atsame54-core/include/util/: bits.h
atsame54-core/mock/: same54p20a.c  same54p20a.h
atsame54-core/src/: startup_same54p20a.c  system_same54p20a.c
atsame54-example/: CMakeLists.txt
atsame54-example/config/: metainformation.in
atsame54-example/include/app/: main.h  metainformation.h
atsame54-example/ld/: same54p20a_flash.ld
atsame54-example/lib/: same54p20a_flash.ld
atsame54-example/src/: main.c
atsame54-example/test/inttest/: CMakeLists.txt  __init__.py  conftest.py  gdbwrapper.py  pytest.ini  test_scheduler.py
atsame54-example/test/unittest/: CMakeLists.txt
atsame54-example/test/unittest/src/: test_application.cpp
atsame54-hal/: CMakeLists.txt  README.md
atsame54-hal/api/hal/complex/: pdec.h  rstc.h  rtc.h  tcc.h  trng.h
atsame54-hal/api/hal/io/: eic.h
atsame54-hal/api/hal/system/: stream.h
atsame54-hal/examples/: watchdog_normal.c
atsame54-hal/fake/: CMakeLists.txt
atsame54-hal/fake/include/: fake_gpio.h
atsame54-hal/fake/src/: fake_gpio.c  fake_trng.c
atsame54-hal/include/hal/: gpio.h  mcu.h  pdec.h
atsame54-hal/include/hal/complex/: pdec.h  rstc_internal.h  tcc.h  tcc_internal.h
atsame54-hal/include/hal/io/: eic.h  gpio.h
atsame54-hal/include/hal/system/: clock.h  mcu.h  watchdog.h
atsame54-hal/src/: gpio.c  mcu.c  pdec.c
atsame54-hal/src/complex/: pdec.c  rstc.c  tcc.c  trng.c
atsame54-hal/src/diagnostic/: monitor.c
atsame54-hal/src/io/: eic.c  gpio.c
atsame54-hal/src/system/: clock.c  mcu.c  watchdog.c  wdt.c
atsame54-hal/test/: CMakeLists.txt
atsame54-hal/test/mock/: gpio.c
atsame54-hal/test/mock/hal/: mock_gpio.h
atsame54-hal/test/unittest/: CMakeLists.txt
atsame54-hal/test/unittest/src/: test_rstc.cpp  test_tcc.cpp  test_trng.cpp  test_watchdog.cpp  test_wdt.cpp
atsame54-xplained/: CMakeLists.txt  README.md
atsame54-xplained/api/xplained/board/: init.h
atsame54-xplained/api/xplained/io/: pdec.h  user_io.h
atsame54-xplained/include/xplained/board/: init.h
atsame54-xplained/include/xplained/io/: pdec.h  user_io.h
atsame54-xplained/src/board/: init.c
atsame54-xplained/src/io/: pdec.c  user_io.c
atsame54-xplained/test/: CMakeLists.txt
atsame54-xplained/test/inttest/: CMakeLists.txt  main.c
atsame54-xplained/test/inttest/include/: test_pdec.h  test_user_io.h
atsame54-xplained/test/inttest/src/: main.c  test_user_io.c
atsame54-xplained/test/unittest/: CMakeLists.txt  main.c
docs/: CMakeLists.txt  Doxyfile  conf.py  index.rst
docs/design/hal/complex/: pdec.rst
docs/design/hal/io/: gpio.rst
docs/hal/: index.rst
docs/hal/complex/: pdec.rst
docs/hal/io/: gpio.rst
lib/assert/: CMakeLists.txt
lib/assert/api/: custom_assert.h
lib/assert/api/inline/: arm_cm_assert.h  gtest_assert.h  std_assert.h  unity_assert.h
lib/assert/src/: custom_assert.c
lib/fff/: CMakeLists.txt
lib/googletest-util/: CMakeLists.txt
lib/googletest-util/api/gtest_util/: gtest_util.h
lib/googletest-util/src/: gtest_util.cpp
lib/threadx-port/: CMakeLists.txt
lib/threadx-port/src/: tx_initialize_low_level.S
tools/: atmel_same54_xplained.cfg
tools/cmake/: armgcc-toolchain.cmake  gcc-toolchain.cmake  mingw-toolchain.cmake
tools/docker/: development.dockerfile  remote.dockerfile
tools/hexregistry/: package.cmake  package.json.in
